<resources>
    <string name="app_name">VINYLA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_background_contentDescription">Background for the welcome screen.</string>
    <string name="welcome_vinyla_logo_square_shadow_contentDescription">VINYLA square logo with drop shadow for the welcome screen.</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="vinyla_wide_logo_contentDescription">VINYLA wide logo.</string>
    <string name="back_button">Back button.</string>
    <string name="email_example">email@example.com</string>
    <string name="firstname_example">firstname</string>
    <string name="lastname_example">lastname</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="loginNoSpace">Login</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_password_reset_warning">Keep in mind!\nPasswords cannot be reset!</string>
    <string name="loading_icon">Loading icon for grid view.</string>
    <string name="your_top_x_artists">Your top %d artists</string>
    <string name="empty"></string>
    <string name="selected_artists_list">Selected artists: %s</string>
    <string name="main_settings_button_contentDescription">Settings button for the main screen.</string>
    <string name="main_logout_button_contentDescription">Lougout button for the main screen.</string>
    <string name="create_station">create station</string>
    <string name="main_create_station_button_contentDescription">Creat station button for the main screen.</string>
    <string name="vinyla_web_button_contentDescription">Redirect button to go to Vinyla web.</string>
    <string name="web">web</string>
    <string name="empty_collection_text">You don\'t have any albums in your collection! You can add them by clicking the web button below!</string>
    <string name="selected_artists">Selected Artists</string>
    <string name="redirect_text">You will be redirected with the following artists...</string>
    <string name="main_redirect_close_imageButton_contentDescription">The close button for the redirect pop-up.</string>
    <string name="choose_streamingService">Choose your streaming service.</string>
    <string name="streamingService_imageButton">A button to set the streaming service.</string>
</resources>